# omni-sem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  clippy.toml
.github/workflows/: ci.yml
crates/omnisem-cli/: Cargo.toml
crates/omnisem-cli/src/: main.rs
crates/omnisem-core/: Cargo.toml
crates/omnisem-core/src/: domain.rs  lib.rs  parsing.rs  storage.rs
docs/: architecture.md  dependencies.md  development.md  retrieval-evaluation.md  schema.md  threat-model.md  vision.md
docs/adr/: 0001-rust-first.md  0002-sqlite-system-of-record.md  0003-source-revisions-are-immutable.md  0004-graph-is-derived.md  0005-read-only-mcp.md  0006-daemon-and-mcp-lifecycles.md
evals/: corpus.jsonl  judgments.jsonl  queries.jsonl
evals/schema/: corpus.schema.json  judgment.schema.json  query.schema.json  result.schema.json
migrations/: 0001_initial.sql
scripts/: check.sh
tests/fixtures/: minimal.md
