[workspace]
members = ["crates/omnisem-core", "crates/omnisem-cli"]
resolver = "2"

[workspace.package]
version = "0.1.0-alpha.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/omni-sem/omni-sem"
rust-version = "1.85"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
uuid = { version = "1.17", features = ["serde", "v4"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
